--- a/fixitdesk-frontend/src/index.css
+++ b/fixitdesk-frontend/src/index.css
@@ -5,6 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
 }
 
 code {
@@ -13,6 +14,52 @@ code {
 }
 
 
-.main-c{
-z-index: 1;
+.main-c {
+  position: relative;
+  z-index: 60;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+}
+
+.main-c h1{
+padding: 25px;
+}
+
+
+.main-c input{
+  background-color: #eee;
+  border: none;
+  padding: 1rem;
+  font-size: 1rem;
+  width: 13em;
+  border-radius: 1rem;
+  color: rgb(25, 17, 177);
+  box-shadow: 0 0.4rem #087aae;
+  cursor: pointer;
+}
+
+.main-c input:focus {
+  outline-color: rgb(25, 17, 177);
+}
+
+.main-c form{
+font-size: 20px;
+letter-spacing: 3px;
+font-family:fantasy;
+}
+
+.main-c button {
+   padding: 12px 24px;
+   background: #007bff;
+   color: white;
+   border: none;
+   border-radius: 5px;
+   cursor: pointer;
+   font-size: 16px;
+ }
+
+.main-c div{
+padding:10px;
 }
