--- a/fixitdesk-frontend/src/css/navbar.css
+++ b/fixitdesk-frontend/src/css/navbar.css
@@ -6,7 +6,7 @@
 .navbar-wrapper {
 
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font: size 19px;
+  font-size: 19px;
   z-index: 5;
 }
 
@@ -14,10 +14,11 @@
 nav {
   background-color: rgb(167, 182, 248);
   box-shadow: 3px 3px 5px black;
-  z-index: 10;
-  position: sticky;
+  top: 0;
+  z-index: 999;
+  position: fixed;
+  width: 100vw;
 }
-
 nav ul {
   width: 100%;
   list-style: none;
