--- a/fixitdesk-frontend/src/css/fixer.css
+++ b/fixitdesk-frontend/src/css/fixer.css
@@ -3,24 +3,28 @@
    margin: 50px auto;
    font-family: Arial, sans-serif;
    padding: 20px;
+
+
  }
 
  .fixer-frame h1 {
    text-align: center;
-   color: #333;
+   color: #ffffff;
+   letter-spacing: 3px;
  }
 
  .chat-box {
-   border: 1px solid #ccc;
-   height: 400px;
+   border: 2px solid #ccc;
+   height: 450px;
    overflow-y: auto;
    padding: 15px;
    margin-bottom: 15px;
    background: #f9f9f9;
    border-radius: 8px;
    position: relative;
-   z-index: 10;
+   z-index: 100;
    box-shadow: 7px 7px 20px rgb(127, 192, 210);
+  
 
 
  }
